compiler/tests/en/errors/overload_none.salam
// EXPECT: E012
func f(a i32): end

func main:
    f("str")
end
